# home_work_beta_2

./: pyproject.toml  widget.py
src/: masks.py  processing.py  widget.py
