[tool.poetry]
name = "home-work-beta-1"
version = "0.1.0"
description = ""
authors = ["Ivan Zuev <ivan.zuev.1984@mail.ru>"]
readme = "README.md"
packages = [{include = "home_work_beta_1"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
black = "^23.10.1"
isort = "^5.12.0"
mypy = "^1.6.1"


[flake8]
max-lines-leght = 119



[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

[tool.isort]
line_length = 119

[tool.black]
line_length = 119


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
